# group_11

./: .gitignore
backend/: .env  Cargo.toml  errorReadMe.md
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/src/: main.rs
backend/src/sql/: common.rs
front/: package-lock.json  package.json
front/src/: App.tsx  index.tsx
front/src/pages/: CanvasJs.jsx  CanvasThing.js  MapDataTab.jsx  Tab1.css  Tab1.tsx  canvasStyle.css  login.jsx  menu.jsx  registeration.jsx
front/src/pages/canvas/: CanvasThree.jsx  Cylinder.jsx  Sphere.jsx  shape.jsx
