[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
serde = {version="1.0.131", features=["derive"]}
serde_json = "1.0.72"
diesel = { version = "1.0.0", features = ["postgres"] }
