[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
serde = {version="1.0.131", features=["derive"]}
serde_json = "1.0.72"
deadpool-postgres = "0.10.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.5"
config = "0.11.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
