[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.4"
actix-web ={ version = "4.0.0-beta.10" }
serde = {version="1.0.131", features=["derive"]}
serde_json = "1.0.72"
dotenv = "0.15"
thiserror = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["serde"] }
deadpool-postgres = {version="0.10.1", features = ["serde"] }
config = "0.11.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-pg-mapper = "0.2.0"
derive_more = "0.99.17"
